home/apps/default/peptide-pitstop/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: &app peptide-pitstop
  namespace: default
spec:
  selector:
    app: *app
  ports:
    - port: &port 3000
      targetPort: *port
  type: ClusterIP
